--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "nextjs-course",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.5",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^3.6.4",
+    "next": "10.0.6",
+    "next-auth": "^3.4.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
